# agent-6a811d44-6e2b-4fda-9df1-89ec6286d328

./: .env.example  .gitignore  README.md  agent_spec.md  common.py  logger.py  pyproject.toml
agent/: __init__.py  agent.py  main.py
tools/: bash_tool.py  grep_tool.py  logger.py
utils/: structure_output.py
